# ai-text-generation

./: .dockerignore  .gitignore  Dockerfile  README.md  build_dataset.py  build_dataset_by_section.py  build_dataset_fim.py  dataset.py  fim_smol_tokenizer.py  fine-tuning.ipynb  model.py  predict.py  predict_clm.py  pyproject.toml  requirements.prod.txt  requirements.txt  serve.py  test.ipynb  train  train.py  train_clm.py  train_clm_by_section.py  training.ipynb
extension/rht-text-generator/: CHANGELOG.md  README.md  README.old.md  package-lock.json  package.json  rht-text-generator-0.0.1.vsix  rht-text-generator-0.0.2.vsix  rht-text-generator-0.0.3.vsix  rht-text-generator-0.1.1.vsix
extension/rht-text-generator/src/: extension.ts  triggers.ts
fim_smol_tokenizer/: added_tokens.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json
model_serving/cpu/: .env.example  Containerfile  requirements.txt  runtime.py  serving-runtime.yaml
pipelines/: .gitignore  clone.ipynb  get_skus.ipynb  preprocess.ipynb  projects.py  train.ipynb  train.requirements.txt  training.pipeline
pipelines/build_model_server/: .env.example  download_model.py  requirements.txt
