[project]
name = "rht-writing-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.2.1",
    "datasets>=3.2.0",
    "evaluate>=0.4.3",
    "ipykernel>=6.29.5",
    "scikit-learn>=1.6.0",
    "torch",
    "torchvision",
    "transformers",
]
